--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="input-field col s10 m4">
                 <input type="text" id="host" class="value" />
-                <label class="translate" for="host">Volumino Address</label>
+                <label class="translate" for="host">Volumino Host Address</label>
             </div>
         </div>
         <div class="row">
