--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -93,8 +93,8 @@
                     <label class="translate" for="subscribeToStateChanges">Subscribe to player state changes</label>
                 </div>
                 <div class="input-field col s10 m4">
-                    <input type="number" id="port" class="value" />
-                    <label class="translate" for="port">Port</label>
+                    <input type="number" id="subscriptionPort" class="value" />
+                    <label class="translate" for="subscriptionPort">Port</label>
                 </div>
             </div>
         </div>
