First test with randomSubscriptionPort

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -92,6 +92,10 @@
                     <input type="checkbox" id="subscribeToStateChanges" class="value"/>
                     <label class="translate" for="subscribeToStateChanges">Subscribe to player state changes</label>
                 </div>
+                <div class="col s10 m4">
+                    <input type="checkbox" id="randomSubscriptionPort" class="value"/>
+                    <label class="translate" for="randomSubscriptionPort">Use random free port</label>
+                </div>
                 <div class="input-field col s10 m4">
                     <input type="number" id="subscriptionPort" class="value" />
                     <label class="translate" for="subscriptionPort">Port</label>
